# duckdb-interoperability

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test.sh
src/seed/: __init__.py  __main__.py  data.py  etl.py  models.py  schemas.py  seeders.py  sources.py  validate.py
