[project]
name = "duckdb-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "mysql-connector-python",
    "psycopg2-binary",
    "pymongo",
    "openpyxl",
]

[project.scripts]
seed = "seed.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seed"]

[dependency-groups]
dev = ["ruff", "ty"]
