[project]
name = "duckdb-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "sqlalchemy",
    "mysql-connector-python",
    "psycopg2-binary",
    "pymongo",
    "openpyxl",
    "pydantic",
    "pyarrow",
    "polars",
    "pandera[polars]",
]

[project.scripts]
seed = "seed.__main__:main"
validate = "seed.validate:main"
polars = "seed.etl:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seed"]

[dependency-groups]
dev = ["ruff", "ty"]
